<?xml version="1.0"?>
<package format="2">
  <name>francor_robots</name>
  <version>0.0.0</version>
  <description>The francor Gazebo simulation package.</description>

  <maintainer email="knueppl@gmx.de">Christian Merkl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
<!--    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/>-->
  </export>
</package>
